Squashed : merging tag20230323_13

--- a/instantHTML.html
+++ b/instantHTML.html
@@ -38,6 +38,7 @@ a:active
 	please dev console ( F12 ) 
 	</div> 
 
+<script src="./hanguelFHPatcher.js" ></script> 
 <script src="./hanguelHalfWidthFromFullWidthSingle.js" ></script> 
 
 	</body> 
